--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "cocept/filter": "^1.0",
+        "cocept/filter": "1.0.2",
         "symfony/assetic-bundle": "^2.8"
     },
     "require-dev": {
